<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.example.emilia.assignment_2.search"
    android:orientation="vertical"
    android:background="#ffffffff">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titleReseplaneraren"
        android:id="@+id/titleViewResa"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffffff"
        android:background="#ffff1d23"
        android:padding="15dp"
        android:textSize="@dimen/abc_action_bar_progress_bar_size"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shufflebutton"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/shuffleicon"
        android:layout_marginTop="-65dip"
        android:layout_marginRight="-150dip"
        android:background="@drawable/shuffleicon"/>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dip"
        android:layout_marginBottom="-20dip">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textFrom"
            android:id="@+id/textView2"
            android:elegantTextHeight="false"
            android:enabled="false"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:textColor="#ff000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView6"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="#ff000000"
            android:text="@string/textTill"
            android:layout_below="@+id/textView2"
            android:layout_alignEnd="@+id/textView2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textView2"
            android:layout_marginRight="15dip"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:layout_alignBottom="@+id/textView6"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textView6"
            android:layout_marginRight="15dip"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textTimeDate"
            android:id="@+id/textView7"
            android:layout_below="@+id/textView6"
            android:layout_alignParentStart="true"
            android:paddingTop="30dp"
            android:paddingLeft="20dp"
            android:textColor="#ff000000"
            android:paddingBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textJustNu"
            android:id="@+id/textView8"
            android:layout_alignBottom="@+id/textView7"
            android:layout_centerHorizontal="true"
            android:paddingBottom="20dp"
            android:textColor="#ff000000" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textRedigera"
            android:id="@+id/button"
            android:layout_alignBottom="@+id/textView7"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="7dip"
            android:layout_marginRight="15dip"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textAnkomst"
            android:id="@+id/radioButton"
            android:layout_below="@+id/textView7"
            android:layout_alignEnd="@+id/textView7" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textAvgang"
            android:id="@+id/radioButton2"
            android:layout_below="@+id/textView8"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textTrafikslag"
            android:id="@+id/textView9"
            android:textColor="#ff000000"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:layout_below="@+id/radioButton"
            android:layout_alignParentStart="true"
            android:nestedScrollingEnabled="false" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textRedigera2"
            android:id="@+id/button2"
            android:layout_alignTop="@+id/textView9"
            android:layout_alignEnd="@+id/editText2"
            android:layout_marginTop="7dip"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textButtonSearch"
            android:id="@+id/button3"
            android:layout_marginTop="29dp"
            android:layout_below="@+id/button2"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textFavoritresor"
            android:id="@+id/textView10"
            android:layout_above="@+id/textView12"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="47dp"
            android:padding="20dp"
            android:clickable="true"
            android:textColor="#ffffffff"
            android:background="#ffff1d23"
            android:textStyle="bold"
            android:layout_marginBottom="7dip"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textBevaknignar"
            android:id="@+id/textView12"
            android:padding="20dp"
            android:background="#ffff1d23"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>


</LinearLayout>
