<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity$PlaceholderFragment"
    android:background="#ffffffff">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titleST"
        android:id="@+id/titleView"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffffff"
        android:background="#ffff1d23"
        android:padding="15dp"
        android:textSize="@dimen/abc_action_bar_progress_bar_size" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:gravity="top">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Skånetrafiken"
                    android:id="@+id/textView11"
                    android:gravity="center|left"
                    android:paddingLeft="4dp"
                    android:textColor="#ffffff"
                    android:autoText="false"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:gravity="bottom">

                <ImageButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/search_btn"
                    android:src="@drawable/searchicon"
                    android:layout_gravity="center_vertical|bottom"
                    android:layout_weight="1"
                    android:maxWidth="48dp"
                    android:maxHeight="48dp"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:scaleType="center"
                    android:background="#ffffffff" />

                <ImageButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButton"
                    android:layout_gravity="center_vertical|bottom"
                    android:baselineAlignBottom="false"
                    android:src="@drawable/calicon"
                    android:layout_weight="1"
                    android:scaleType="center"
                    android:maxWidth="48dp"
                    android:maxHeight="48dp"
                    android:background="#ffffffff" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:layout_gravity="top">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/textPlanerare"
                    android:id="@+id/textView5"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical|top"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/textTidtabell"
                    android:id="@+id/textView3"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical|top"
                    android:gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:gravity="bottom" >

                <ImageButton
                    android:layout_width="218dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButton3"
                    android:src="@drawable/clockicon"
                    android:layout_gravity="center_vertical|bottom"
                    android:background="#ffffffff" />

                <ImageButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButton4"
                    android:layout_gravity="center_vertical|bottom"
                    android:baselineAlignBottom="false"
                    android:src="@drawable/ticketicon"
                    android:layout_weight="1"
                    android:background="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="fill_horizontal"
                android:layout_gravity="top">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/textHallplats"
                    android:id="@+id/textView4"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical|top" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/textBiljetter"
                    android:id="@+id/textView"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical|top"
                    android:longClickable="false" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

